kubernetes-yamls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikipedia-deployment
spec:
  selector:
    matchLabels:
      app: wikipedia
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: wikipedia
    spec:
      containers:
      - name: wikipedia
        image: darkimpact/wikipedia-api:latest  ## pulling image from dockerhub
        ports:
        - containerPort: 5000
