kubernetes-yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikipedia-service
spec:
  selector:
    app: wikipedia
  ports:
  - protocol: TCP
    port: 5000  # port for service expose
    targetPort: 5000 # Application will be listen this port
