kubernetes-yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wikipedia-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing 
    # Solution for exposing applications on AKS cluster
    # Not Designed for production environemnt!
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: wikipedia-service
            port:
              number: 5000
